--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1550,7 +1550,7 @@
 		margin-bottom: 0;
 	}
 	.sidebar_acc_body .sidebar_check{
-		display: flex;
+		display: flex!important;
 		margin-bottom: 0;
 		cursor: pointer;
 		font-size: 14px;
@@ -1579,7 +1579,7 @@
 		background-color: #f31f21;
 		position: absolute;
 		top: -7px;
-	    left: 90%;
+	    left: 150px!important;
 		border: 0;
 		box-shadow: 0px 1px 6px rgba(0, 0, 0, .5);
 		display: none;
@@ -5610,8 +5610,32 @@
 	.card__details_price{
 		background-color: #4e4e4e;
 	}
+	.details__nextArrow, .details__nextArrow span, .details__prevArrow, .details__prevArrow span{
+		position: unset;
+	}
+	.details__nextArrow, .details__prevArrow{
+		width: 45px;
+		height: 45px;
+		border: 1px solid #c1c1c1;
+	}
+	.details__nextArrow{
+		margin-left: 20px;
+	}
+	.slider-heading{
+		padding:  0 10px;
+		margin-bottom: 15px;
+
+		h2{
+			font-size: calc(3px + 4vw);
+			display: inline;
+			white-space: nowrap;
+		}
+	}
 }
 @media screen and (max-width: 515px){
+	.slider-mobile-col{
+		padding: 0 5px;
+	}
 	.cross{
 		.cross__prise-and-avail-wrap_mobile{
 			width: 31vw;
@@ -5662,5 +5686,12 @@
 			bottom: 10px;
 			right: 0;
 		}
+	}
+}
+@media screen and (max-width: 350px){
+	.details__nextArrow, .details__prevArrow{
+		width: 40px;
+		height: 40px;
+		border: 1px solid #c1c1c1;
 	}
 }
