--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -5463,13 +5463,13 @@
 			border-radius: unset;
 		}
 	}
-	.header{
+	.cross .header{
 		box-shadow: none;
 	}
 	.sticky{
 		box-shadow: 0px 7px 13px rgba(0, 0, 0, 0.13);
 	}
-	.header_search_wrap{
+	.cross .header_search_wrap{
 		display: none;
 	}
 	.content-container{
